# SMS-Spam-Detector

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py  template.py
conf/: configs.yaml  schema.yaml
data/processed/: sms_data.csv
data/test/: test_data.csv  test_sparse_matrix.npz
data/train/: train_data.csv  train_sparse_matrix.npz
models/predictions/: test_preds.npy  train_preds.npy
models/scores/: model_scores.json
models/standardizers/: standardizer.joblib
models/trained/: model.joblib
notebooks/: 01_data_exploration.ipynb  02_model_experiments.ipynb
src/: constants.py
src/components/: data_ingestion.py  data_processor.py  data_splitter.py  data_standardizer.py  model_evaluation.py  model_trainer.py
src/pipelines/: stage_01_data_ingestion.py  stage_02_data_processing.py  stage_03_data_splitting.py  stage_04_data_standardization.py  stage_05_model_training.py  stage_06_model_evaluation.py
src/utils/: basic_utils.py  model_utils.py
